# surfer-alggeo-gtk

./: AUTHORS  ChangeLog  INSTALL.linux  INSTALL.macosx  Makefile.am  Makefile.in  NEWS  README  Surfer_auf_dem_Mac.txt  THANKS  aclocal.m4  autogen.sh  config.h.in  config.status  configure  configure.ac  configure.in  create_deb.sh  surfer  surfer_ui.xml  surfer_ui_exhibition.xml
deb/DEBIAN/: control
doc/: Makefile.am  Makefile.in
examples/: surfer  surfer_ui.xml
gallery/: Makefile.am  Makefile.in  galleries.txt  gallery-cfg.mk.in  gallery-def.mk  gallery.am  gallery.mk  gallerycollectionmakefile.mk  gallerymakefile.mk
gallery-ca/ADE/: A1pm.pic  A4pm.ppm
gallery-ca/ManySings/: barth_sextic.ppm
gallery-ca/RatFl/: RatFl.txt  cayley.ppm  einHyp.pic  hypPar.pic  kegel.pic
gallery-ca/flaechen/: Crixxi.ppm  Dattel.pic  Wigwam.pic
gallery-de/ADE/: A2pm.ppm  ADE.ppm
gallery/ADE/: A2pp.pic  A3mm.pic  A4pp.ppm  A5pm.ppm
gallery/ManySings/: ManySings.txt  doppelkegel.pic  kummer.ppm
gallery/RatFl/: RatFl.txt
gallery/flaechen/: Berg.sux  Buggle.sux  Calyx.pic  Columpius.pic  Cylinder.sux  Daisy.sux  Dattel.pic  Dattel.sux  Diabolo.sux  Dingdong.pic  Dingdong.sux  Distel.sux  Eistuete.pic  Eve.sux  Fanfare.ppm  Flirt.sux  Gupf.sux  Harlekin.sux  Herz.pic  Herz.sux  Himmel und HÃ¶lle.sux  Kegel.sux  Kolibiri.sux  Kreuz.pic  Kreuz.sux  Limao.sux  Miau.pic  Michaelangelo.sux  Pilzchen.pic  Pilzchen.sux  Plop.pic  Polsterzipf.pic  Polsterzipf.sux  Schneeflocke.sux  SphÃ¤re.sux  Spitz.sux  Subway.sux  SÃ¼ss.sux  Tanz.sux  Taube.sux  (+18 more)
gallery/flaechen_fantasien/: Calypso.sux  Calyx.ppm  Calyx.sux  Columpius.sux  Crixxi.sux  Cube.sux  Diabolo.ppm  Dingdong.pic  Dromedar.pic  Dromedar.sux  Dullo.sux  Durchblick.pic  Durchblick.sux  Eistuete.ppm  EistÃ¼te.sux  Fanfare.pic  Fanfare.sux  Geisha.pic  Geisha.sux  Helix.sux  Herz.ppm  Miau.sux  Michaelangelo.pic  Nepali.sux  Octdong.sux  Pipe.pic  Pipe.sux  Plop.sux  Sattel.sux  Schneeflocke.pic  Seepferdchen.sux  Sofa.pic  Sofa.sux  Solitude.sux  Spindel.sux  Stern.sux  SÃ¼ss.pic  Thumbs.db  Tobel.sux  Ufo.pic  (+7 more)
gallery/gallery-ca/: galleries.txt
gallery/gallery-ca/ADE/: A3pm.ppm  A4pm.pic  ADE.txt
gallery/gallery-ca/ManySings/: ManySings.txt  dessins_quint_15a2.pic  endrass_octic.pic  septic_7eck.pic
gallery/gallery-ca/RatFl/: kub_D4.ppm
gallery/gallery-ca/flaechen/: Dromedar.ppm  Geisha.pic  Gupf.pic  Pilzchen.pic  Sphaere.pic  Suess.ppm
gallery/gallery-ca/flaechen_fantasien/: Distel.pic  Nepali.ppm  Zeck.ppm  flaechen_fantasien.txt
gallery/gallery-de/: galleries.txt
gallery/gallery-de/ADE/: A1pm.ppm  A5pm.pic  ADE.txt
gallery/gallery-de/ManySings/: barthquintic_15A2.pic  barthquintic_15A2.ppm  cayley.pic  kegel.pic  labs_septic.pic  monoid.pic  togliatti.ppm
gallery/gallery-de/RatFl/: Ell.ppm  hypZyl.pic  kegel.ppm
gallery/gallery-de/flaechen/: Cube.pic  GNUmakefile  Kreuz.ppm  Pilzchen.ppm  Suess.pic  Ufo.ppm  Zylinder.pic  flaechen.txt
gallery/gallery-de/flaechen_fantasien/: Dullo.ppm  Flirt.ppm  Helix.ppm  Tuelle.ppm  flaechen_fantasien.txt
gallery/gallery-en/: Makefile.am
gallery/gallery-en/ADE/: ADE.txt
gallery/gallery-en/ManySings/: ManySings.txt  kummer.pic  nonic_27D4_3A1.pic
gallery/gallery-en/RatFl/: kub_A5A1.ppm
gallery/gallery-en/flaechen/: Harlekin.pic  Makefile.am  Octdong.ppm  Plop.pic  Spindel.pic  Spindel.ppm  Tanz.ppm  flaechen.txt
gallery/gallery-en/flaechen_fantasien/: Visavis.ppm  flaechen_fantasien.txt
gallery/gallery-es/ADE/: A4pp.pic  ADE.txt
gallery/gallery-es/ManySings/: ManySings.txt  cayley.ppm  chmutov_pn_8.pic  dessins_quint_15a2.ppm  p9surface.pic  togliatti.pic
gallery/gallery-es/RatFl/: Ell.pic  RatFl.txt  ellZyl.ppm
gallery/gallery-es/flaechen/: Kolibiri.ppm  Trichter.pic  Trichter.ppm
gallery/gallery-es/flaechen_fantasien/: Eistuete.pic  Herz.pic
gallery/gallery-ga/: GNUmakefile
gallery/gallery-ga/ADE/: ADE.txt
gallery/gallery-ga/ManySings/: ManySings.txt  chmutov_pn_8.ppm  kub_D4.pic  kub_D4.ppm
gallery/gallery-ga/RatFl/: RatFl.txt  ebene.pic  kugel.pic
gallery/gallery-ga/flaechen/: Cube.ppm  Dromedar.pic  Flirt.pic  Gupf.ppm  Pipe.pic  Plop.ppm  Polsterzipf.pic  Schneeflocke.pic  Sofa.ppm  Tanz.pic  Tobel.ppm  Wigwam.ppm  Windkanal.pic  Zylinder.ppm
gallery/pool/: Makefile.am  Makefile.in
gallery/pool/pic/: A1pm.pic  A2pm.pic  A2pp.pic  A3mm.pic  A3pm.pic  A4pm.pic  A4pp.pic  A5mm.pic  A5pm.pic  Buggle.pic  Calypso.pic  Calyx.pic  Columpius.pic  Crixxi.pic  Cube.pic  Daisy.pic  Dattel.pic  Diabolo.pic  Dingdong.pic  Distel.pic  Dromedar.pic  Dullo.pic  Durchblick.pic  Eistuete.pic  Ell.pic  Fanfare.pic  Flirt.pic  Geisha.pic  Gupf.pic  Harlekin.pic  Helix.pic  Herz.pic  Kolibiri.pic  Kreuz.pic  Limao.pic  Makefile.am  Makefile.in  Miau.pic  Michaelangelo.pic  Nepali.pic  (+54 more)
gallery/pool/ppm/: A5mm.ppm  Buggle.ppm  Columpius.ppm  Daisy.ppm  Geisha.ppm  Limao.ppm  Makefile.am  Makefile.in  Miau.ppm  Michaelangelo.ppm  Solitude.ppm  Twilight.ppm  Whitney.ppm  Zitrus.ppm  clebsch.ppm  ebene.ppm  einHyp.ppm  endrass_octic.ppm  hypPar.ppm  septic_7eck.ppm
m4/: ChangeLog  surfer_gallery_setup.m4
man/: surfer-alggeo-gtk.h2m  surfer.h2m
po/: ChangeLog  LINGUAS  Makevars  POTFILES  POTFILES.in  ca_ES.gmo  ca_ES.po  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  en_GB.gmo  en_GB.po  es.gmo  es.po  es_ES.gmo  es_ES.po  ga_ES.gmo  ga_ES.po  surfer-alggeo-gtk.pot  surfer.pot
src/: Makefile.am  Makefile.in  about.cc  bwindow_gdk.cc  bwindow_gdk.hh  fix_input.cc  gallery.cc  gallerycontrol.cc  matrix.hh  options.cc  parallel.cc  parsepic.cc  rotate.cc  select.cc  surfer-alggeo-gtk.1  surfer.cc  surfer.hh  win32.cc  xpm_data.cc
src/vecmath/: AxisAngle4_.h  Color3.h  Color4.h  Matrix3.h  Matrix3_.h  Matrix4.h  Matrix4_.h  Point2.h  Point3.h  Point4.h  Quat4_.h  TexCoord2.h  Tuple2.h  Tuple3.h  Tuple4.h  Vector2.h  Vector3.h  Vector4.h  VmUtil.h  vm_conf.h
win32/: gtkmm-2.4.vsprops  gtkmm-2.4d.vsprops  gtkmm-vc90-2_4.vsprops  gtkmm-vc90-d-2_4.vsprops  postbuild.bat  surfer.ini  surfer.sln  surfer.vcproj
(+118 files in other folders)
