
AC_INIT([surfer], [0.1], [surfer@imaginary2008.de])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADER([config.h])


AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([float.h stddef.h stdlib.h unistd.h])


AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T


AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS([pow sqrt])


AM_GNU_GETTEXT([external])

AC_LANG_CPLUSPLUS

PKG_CHECK_MODULES([GTKMM], [gtkmm-2.4 >= 2.10.0])

AC_OUTPUT(Makefile src/Makefile  po/Makefile.in)

