
AC_INIT([surfer],[0.1],[surfer@imaginary2008.de])

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_LANG([C++])
AC_PROG_CXX

AC_HEADER_DIRENT
AC_CHECK_FUNCS([pow sqrt])

AM_GNU_GETTEXT([external])



PKG_CHECK_MODULES([GTKMM], [gtkmm-2.4 >= 2.8])

AC_CONFIG_FILES([Makefile src/Makefile  po/Makefile.in])
AC_OUTPUT

